@startuml
'https://plantuml.com/class-diagram

class Course
class CourseCatalogue
class Registration
class Student
class CourseOffering

Course <-- Course : +prerequisite
CourseOffering o-- Course
CourseCatalogue --o Course
Student -- CourseCatalogue : uses
Student -- Registration
CourseOffering -- Registration



class Course {
- String courseName
- String courseNumber
- List<Course> prerequisite

+ addPrerequisite(Course)
+ checkPrerequisite(Course)
}

class Student {
- String firstName
- String lastName
- List<Registration> enrolled

+ register(String)
+ checkCatalogue(Course)
}

class CourseCatalogue {
- Set<Course> courses
+ addCourse()
}

class Registration {
- CourseOffering course
- Student student
- char grade

+ addGrade()
+ checkAvailability()
}

class CourseOffering {
- Course course
- ArrayList<Student> students
- char term
- String year

+ willClassRun()

}


@enduml